--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@
     justify-content: space-evenly;
     align-items: center;
     background-color: #1f2937;
-    padding: 20px 50px;
+    padding: 50px 50px 100px;
 }
 
 .hero-text {
@@ -49,6 +49,18 @@
     align-items: flex-start;
     padding: 50px 150px;
     font-size: 36px;
+}
+
+.hero-text h1 {
+    font-size: 48px;
+    color: #f9faf8;
+    padding: 35px 0;
+}
+
+.hero-text p {
+    font-size: 18px;
+    color: #e5e7eb;
+    padding: 20px 0;
 }
 
 .img {
@@ -109,13 +121,13 @@ button {
     border-radius: 5px;
 }
 
-
 .info {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
     padding: 50px 0;
+    height: 650px;
 }
 
 .random-info {
@@ -125,10 +137,10 @@ button {
 }
 
 .grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    display: flex;
+    transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
     gap: 40px;
-    padding: 50px 0;
+
 }
 
 .sm-img {
@@ -144,8 +156,17 @@ button {
     flex-direction: column;
     text-align: center;
     max-width: 150px;
+    min-width: 150px;
     font-size: 16px;
     color: #7a7a7a;
+    background: white;
+    transition: opacity 0.5s;
+}
+
+.card.visible {
+    opacity: 1;
+    pointer-events: auto;
+    position: static;
 }
 
 .call {
@@ -162,4 +183,22 @@ button {
 .bottom-button {
     border: 1px solid;
     border-color: white;
+}
+
+.carousel {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+    position: relative;
+}
+
+.carousel-track {
+    overflow: hidden;
+    width: 990px;
+    /* or whatever fits your design */
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
